@@ -23,6 +23,7 @@ import com.amazonaws.services.s3.AmazonS3Client;
 import com.amazonaws.services.s3.model.DeleteObjectRequest;
 import com.amazonaws.services.s3.model.DeleteVersionRequest;
 import static cloudExplorer.NewJFrame.jTextArea1;
+import com.amazonaws.AmazonServiceException;
 import com.amazonaws.ClientConfiguration;
 
 public class Delete implements Runnable {
@@ -72,11 +73,14 @@ public class Delete implements Runnable {
                 NewJFrame.jTextArea1.append("\nDeleted object: " + what);
             }
             calibrate();
-        } catch (Exception DeleteMessage) {
-            if (debug) {
-                System.out.print("\n\nError: " + DeleteMessage.getMessage() + "\n\n\n");
-                System.exit(-1);
-            }
+        } catch (AmazonServiceException ase) {
+            mainFrame.jTextArea1.append("Error Message:    " + ase.getMessage());
+            mainFrame.jTextArea1.append("HTTP Status Code: " + ase.getStatusCode());
+            mainFrame.jTextArea1.append("AWS Error Code:   " + ase.getErrorCode());
+            mainFrame.jTextArea1.append("Error Type:       " + ase.getErrorType());
+            mainFrame.jTextArea1.append("Request ID:       " + ase.getRequestId());
+            calibrate();
+        } catch (Exception get) {
         }
     }
 
